fix: gap between top-nav task lists and their borders

--- a/app/src/scss/styles.scss
+++ b/app/src/scss/styles.scss
@@ -22,7 +22,6 @@ body {
   height: 7vh;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
   li {
     display: flex;
     justify-content: center;
